# release-monitor-rust

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build_version.rs  config.rs  main.rs  publisher.rs  release_monitor.rs  version_checker.rs  version_updater.rs
src/app/: page.tsx
src/app/_components/: versionPane.tsx
