[package]
name = "release-monitor"
version = "0.1.0"
description = "A app to monitor the latest release version"
authors = ["decryp7"]
license = ""
repository = ""
default-run = "release-monitor"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "api-all", "system-tray", "icon-ico"] }
tokio = { version = "1.0.0", features = ["full"] }
regex = { version = "1.10.5", features = [] }
figment = { version = "0.10", features = ["toml", "env"] }
base64 = "0.22.1"
tracing-appender = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
open = "3.2.0"
directories = "5.0.1"
auto-launch = "0.5.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
